# effect-monad

./: .gitignore  Counter.lhs  CounterC.lhs  IxComonad.lhs  IxCondM.lhs  IxMonad.lhs  LICENSE  Partiality.lhs  README  README.md  Reader.lhs  Reader2.lhs  TupleReader.lhs  Vector.lhs  effect-monad.cabal  fita.key  index.html  ixmonad.cabal  parameterised.hs  sessions.hs  stack.yaml
docs/haskell14-2.key/Metadata/: BuildVersionHistory.plist  DocumentIdentifier  Properties.plist
docs/haskell14.key/Metadata/: DocumentIdentifier  Properties.plist
examples/: .#Reader.hs  ArrayReader.hs  AtomicState.hs  Counter.hs  CounterNat.hs  ExtensibleState.hs  ImplicitP.hs  Maybe.hs  Monad.hs  Problem1.hs  ReadOnceReader.hs  ReadOnlyWriter.hs  Reader.hs  ReaderNat.hs  SafeFiles.hs  Solution1.hs  Solution2.hs  State.hs  StateProblem1.hs  StencilSpecs.hs  TupleReader.lhs  Update.hs  WriteOnceWriter.hs  Writer.hs  WriterM.hs
fita14/: IxMonad.hs  IxMonad.hs~  Reader.hs  Reader.hs~
fita14/alpha/: IxMonad.hs  TupleReader.hs
fita14/beta/: IxMonad.hs  ROWriter.hs  ReadOnlyWriter.hs  Reader.hs  Update.hs
fita14/gamma/: ArrayReader.hs  Cond.hs  IxMonad.hs  Maybe.hs  Reader.hs  StencilSpecs.hs
src/Control/: Coeffect.hs  Effect.hs  IxComonad.hs  IxMonad.hs
src/Control/Coeffect/: Coreader.hs
src/Control/Effect/: Arrow.hs  CatIndexed.hs  Cond.hs  Counter.hs  CounterNat.hs  Maybe.hs  Monad.hs  Parameterised.hs  ParameterisedAsGraded.hs  ReadOnceReader.hs  Reader.hs  Reader2.hs  ReaderNat.hs  State.hs  StateSeparate.hs  Update.hs  UpdateAlt.hs  Vector.hs  WriteOnceWriter.hs  Writer.hs
src/Control/Effect/Helpers/: List.hs  Mapping.hs  Set.hs
src/Control/Effect/Parameterised/: AtomicState.hs  ExtensibleState.hs  SafeFiles.hs  State.hs
src/Control/IxComonad/: Coreader.hs  Reader.hs
src/Control/IxMonad/: CatIndexed.hs  Cond.hs  Counter.hs  Maybe.hs  Monad.hs  ReadOnceReader.hs  ReadOnlyWriter.hs  Reader.hs  Reader2.hs  Reader3.hs  ReaderA.hs  ReaderNat.hs  SetReader.hs  State-U.hs  State.hs  State2.hs  Update.hs  UpdateAlt.hs  Vector.hs  WriteOnceWriter.hs  Writer.hs
src/Control/IxMonad/Helpers/: List.hs  Mapping.hs  Set.hs
