name:                   effect-monad
version:                0.7.0.0
synopsis:               Embeds effect systems into Haskell using graded monads
description:            
   Provides the graded monad structure to Haskell with a number of analogs of familiar monads (Reader, Writer, State, Maybe, Counter, Update) and a wrapper over normal monads (Control.Effect.Monad). This provides a way to embed effect systems into Haskell. For more information see with paper \"Embedding effect systems in Haskell\" by Orchard and Petricek <http://www.cl.cam.ac.uk/~dao29/publ/haskell14-effects.pdf> (Haskell, 2014) and the examples in <https://github.com/dorchard/effect-monad/tree/master/examples>. 
  (note, this package was previously called 'ixmonad' until September 2014). 

license:                BSD3
license-file:           LICENSE
category:               Control, Monads
copyright:              2013-16 University of Cambridge
author:                 Dominic Orchard
maintainer:             Dominic Orchard
stability:              experimental
build-type:             Simple
cabal-version:          >= 1.6
tested-with:            GHC == 7.10.3, GHC == 8.0.1

extra-source-files:     examples/*.hs


source-repository head
  type: git
  location: https://github.com/dorchard/effect-monad

library
  hs-source-dirs:       src


  exposed-modules:      Control.Coeffect
                        Control.Coeffect.Coreader
                        Control.Effect
                        Control.Effect.Cond
                        Control.Effect.Counter
                        Control.Effect.CounterNat
                        Control.Effect.Maybe
                        Control.Effect.Monad
                        Control.Effect.Parameterised
                        Control.Effect.Reader
                        Control.Effect.ReadOnceReader
                        Control.Effect.State	
                        Control.Effect.Update
                        Control.Effect.Vector
                        Control.Effect.WriteOnceWriter
                        Control.Effect.Writer
                        Control.Effect.Helpers.List
                        
  build-depends:        base < 5,
                        type-level-sets == 0.8.0.0
