name:                   ixmonad
version:                0.3
synopsis:               Indexed monads library
description:            Provides the 'indexed monad' structure to Haskell with a number of indexed analogous of familiar monads (Reader, Writer, Maybe) and a wrapper over normal monads (Control.IxMonad.Monad). For more information see <http://dorchard.co.uk/ixmonad>.

license:                BSD3
license-file:           LICENSE
category:               Control, Monads
copyright:              2013-14 University of Cambridge
author:                 Dominic Orchard
maintainer:             Dominic Orchard
stability:              experimental
build-type:             Simple
cabal-version:          >= 1.6
tested-with:            GHC >= 7.6

extra-source-files:     examples/*.hs


source-repository head
  type: git
  location: https://github.com/dorchard/ixmonad

library
  hs-source-dirs:       src

  exposed-modules:      Control.IxMonad
                        Control.IxMonad.Cond
                        Control.IxMonad.Counter
                        Control.IxMonad.Maybe
                        Control.IxMonad.Monad
                        Control.IxMonad.Reader
                        Control.IxMonad.ReadOnlyWriter
                        Control.IxMonad.Update
                        Control.IxMonad.Vector
                        
  build-depends:        base < 5,
                        ghc-prim, 
                        HList >= 0.3